# beagle

./: Cargo.toml
.github/workflows/: build.yml
src/: cli.rs  generate.rs  hashing.rs  init.rs  list.rs  main.rs  sniff.rs
