[package]
name = "beagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
csv = "1.2.1"
sha2 = "0.10.6"
structopt = "0.3.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.29", features = ["macros", "local-offset"] }
walkdir = "2.4.0"
redb = "1.2.0"

[build-dependencies]
static_vcruntime = "2.0"
